--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ frozenlist @ file:///home/conda/feedstock_root/build_artifacts/frozenlist_170264
 fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1719514913127/work
 GDAL @ file:///home/conda/feedstock_root/build_artifacts/gdal-split_1696992718984/work/build/swig/python
 geopandas @ file:///home/conda/feedstock_root/build_artifacts/geopandas_1719933282653/work
+git-filter-repo==2.47.0
 h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1664132893548/work
 h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
 holoviews @ file:///home/conda/feedstock_root/build_artifacts/holoviews_1718288317368/work
@@ -213,6 +214,7 @@ soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_16939292
 stack-data==0.6.3
 starlette @ file:///home/conda/feedstock_root/build_artifacts/starlette-recipe_1709667058396/work
 streamz @ file:///home/conda/feedstock_root/build_artifacts/streamz_1659013840126/work
+svgwrite==1.4.3
 tabulate @ file:///home/conda/feedstock_root/build_artifacts/tabulate_1665138452165/work
 tblib @ file:///home/conda/feedstock_root/build_artifacts/tblib_1702066284995/work
 terminado @ file:///home/conda/feedstock_root/build_artifacts/terminado_1710262609923/work
